--- a/style.css
+++ b/style.css
@@ -14,6 +14,24 @@ body {
   background-color: rgb(238, 124, 143);
 }
 
+#postFullName {
+  font-size: 20px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+
+#postAge {
+  text-align: left;
+}
+
+#postPhoneNumber {
+  text-align: left;
+}
+
+#postAddress {
+  text-align: left;
+}
+
 p {
   font-weight: bold;
 }
